login-deployment.yaml
iapiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: login
  name: login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - image: harshit281/frontendproject_1:login1-image
        name: login
