mongodb.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db1
  template:
    metadata:
      labels:
        app: mongo-db1
    spec:
      containers:
      - image: mongo:latest
        name: mongo-database
