mysql-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-db
  name: mysql-service
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql-db1
  type: ClusterIP
